# OpenVTC

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md
docs/: .markdownlintrc  backup-restore.md  multiple-didweb-same-domain.md  openvtc-config-data-structure.md  openvtc-tool-commands.md  relationships-vrcs.md  secure-key-management.md  secured-configuration-management.md
openvtc-cli/: Cargo.toml  did.jsonl
openvtc-cli/src/: cli.rs  config.rs  log.rs  main.rs  status.rs
openvtc-cli/src/contacts/: mod.rs
openvtc-cli/src/interactions/: mod.rs  vrc.rs
openvtc-cli/src/maintainers/: mod.rs
openvtc-cli/src/messaging/: mod.rs
openvtc-cli/src/openpgp_card/: mod.rs  write.rs
openvtc-cli/src/relationships/: inbound.rs  messages.rs  mod.rs
openvtc-cli/src/setup/: bip32_bip39.rs  did.rs  mod.rs  openpgp_card.rs  pgp_export.rs  pgp_import.rs
openvtc-cli/src/tasks/: clear.rs  fetch.rs  interact.rs  mod.rs
openvtc-cli2/: Cargo.toml  did.jsonl  export.ostc
openvtc-cli2/src/: cli.rs  main.rs
openvtc-cli2/src/state_handler/: mod.rs  state.rs
openvtc-cli2/src/state_handler/actions/: mod.rs
openvtc-cli2/src/state_handler/main_page/: content.rs  menu.rs  mod.rs
openvtc-cli2/src/state_handler/messaging/: mod.rs
openvtc-cli2/src/state_handler/setup_sequence/: config.rs  did_keys.rs  mod.rs  openpgp_card.rs  vta.rs
openvtc-cli2/src/ui/: component.rs  mod.rs
openvtc-cli2/src/ui/pages/: mod.rs
openvtc-cli2/src/ui/pages/main/: mod.rs
openvtc-cli2/src/ui/pages/main/components/: content_panel.rs  menu_panel.rs  mod.rs
openvtc-cli2/src/ui/pages/setup_flow/: config_import.rs  did_keys_export_ask.rs  did_keys_export_inputs.rs  did_keys_export_show.rs  did_keys_show.rs  final_page.rs  mediator_ask.rs  mediator_custom.rs  mod.rs  start_ask.rs  unlock_code_ask.rs  unlock_code_set.rs  unlock_code_warn.rs  username.rs  vta_authenticate.rs  vta_credential.rs  vta_keys_fetch.rs  webvh_address.rs
openvtc-cli2/src/ui/pages/setup_flow/pgp_token/: mod.rs  token_factory_reset.rs  token_select.rs  token_set_cardholder_name.rs  token_set_touch.rs  token_start.rs
openvtc-lib/: Cargo.toml  README.md
openvtc-lib/src/: bip32.rs  colors.rs  errors.rs  lib.rs  logs.rs  maintainers.rs  relationships.rs  tasks.rs  vrc.rs
openvtc-lib/src/config/: did.rs  mod.rs  protected_config.rs  public_config.rs  secured_config.rs
openvtc-lib/src/openpgp_card/: crypt.rs  mod.rs
openvtc-service/: Cargo.toml  README.md
openvtc-service/conf/: config.json-example
openvtc-service/src/: config.rs  main.rs
robotic-maintainers/: Cargo.toml  README.md
robotic-maintainers/src/: main.rs
