[workspace]
members = [
  "openvtc-lib",
  "openvtc-cli",
  "robotic-maintainers",
  "openvtc-service",
  "openvtc-cli2",
]
resolver = "3"

[workspace.package]
description = "Open Verifiable Trust Community (OpenVTC) - First Person Protocol"
version = "0.1.1"
edition = "2024"
publish = false
authors = ["Glenn Gore <glenn@affinidi.com>"]
rust-version = "1.91.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/LF-Decentralized-Trust-labs/openvtc"

[workspace.dependencies]
openvtc = { version = "0.1.0", path = "openvtc-lib", default-features = false }

# Decentralized Trust Graph Credentials
# NOTE: When this is published, switch from git to crates.io
dtg-credentials = { version = "0.1", git = "https://github.com/LF-Decentralized-Trust-labs/dtg-credentials" }

aes-gcm = "0.10"
affinidi-tdk = "0.5"
affinidi-data-integrity = "0.4"
anyhow = "1.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
base64 = "0.22"
bip39 = "2.2"
byteorder = "1.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6.0"
dialoguer = { version = "0.12", features = ["password"] }
didwebvh-rs = "0.1"
ed25519-dalek-bip32 = "0.3"
hex = "0.4"
keyring = "3.6"
multibase = "0.9"
pgp = "0.18"
# This is locked 0.8 due to *-dalek crates not udpated to rand 0.9
rand = "0.8"
ratatui = "0.30"
regex = "1.12"
# this is locked to 0.8.x as openpgp-card is only using 0.8 in it's interfaces - checked 0.5.1 version
secrecy = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
strum = "0.28"
strum_macros = "0.28"
sysinfo = "0.38"
thiserror = "2.0"
tokio = "1.49"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-input = "0.15"
url = "2.5"
uuid = { version = "1.20", features = ["v4", "fast-rng"] }
vta-sdk = { git = "https://github.com/LF-Decentralized-Trust-labs/verifiable-trust-infrastructure", features = [
  "session",
  "client",
  "didcomm",
  "keyring",
] }
reqwest = { version = "0.13", features = ["json"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = "1.8"

# Openpgp-Card Support
openpgp-card = "0.5"
card-backend-pcsc = "0.5"
openpgp-card-rpgp = "0.6"
